--- a/fashion_show.html
+++ b/fashion_show.html
@@ -57,8 +57,8 @@
 
             <ul id="menu-header" class="nav-bar horizontal">
                  <li class="active"><a href="index.html">Home</a></li>
-                 <li class=""><a href="galleries.html">About</a></li>
-                 <li class=""><a href="board.html">The Board</a></li>
+                 <li class=""><a href="about.html">About</a></li>
+                 <li class=""><a href="portfolio.html">The Board</a></li>
                  <li class=""><a href="pinterest-style.html">Events</a></li>
                  <li class=""><a href="fashion_show.html">Fashion Show</a></li>
                  <li class=""><a href="contact.html">Contact Us</a></li>
@@ -103,6 +103,7 @@
           function resizeDiv() {
               vph = $(window).height();
               vpw = $(window).width();
+
               $('header').css({'height': vph + 'px'});
               $('#logo').css({'top': vph/2 - $('#logo img').height()/2 + $('.nav-bar').height()/2 + 'px'});
               $('#logo').css({'left': vpw/2 - $('#logo img').width()/2 + 'px'});
@@ -296,18 +297,18 @@
 <!-- ######################## Section ######################## -->
 
 <section>
-    <div id="bizcazpic"></div> 
+    <div id="formalpic"></div> 
 </section>     
 
     <script type="text/javascript">
-        $("#bizcazpic").css({"background":"url('img/fs/bizcaz1.jpg') fixed no-repeat","background-size":"cover", "height":"450px"});
+        $("#formalpic").css({"background":"url('img/fs/formal3.jpg') fixed no-repeat", "background-size":"cover", "height":"450px"});
     </script>   
 
 <!-- ######################## Section ######################## -->
 
 <section class="section_main">
 
-      <h1 style="text-align:center">BizCaz Scene</h1>
+      <h1 style="text-align:center">Formal Scene</h1>
 
       <h2 style="text-align:center; padding: 0 150px 50px"> I'm in the shizzle sheezy dolor crackalackin amizzle, yo bizzle elit. Nullizzle sapizzle velizzle, for sure volutpizzle, suscipit quizzle, own yo' vizzle, ma nizzle. Pellentesque eget tortor. Sizzle uhuh ... yih!. Fusce izzle shiznit check out this we gonna chung tempizzle break yo neck, yall. </h2>
 
@@ -339,18 +340,18 @@
 <!-- ######################## Section ######################## -->
 
 <section>
-    <div id="formalpic"></div> 
+    <div id="bizcazpic"></div> 
 </section>     
 
     <script type="text/javascript">
-        $("#formalpic").css({"background":"url('img/fs/formal3.jpg') fixed no-repeat", "background-size":"cover", "height":"450px"});
+        $("#bizcazpic").css({"background":"url('img/fs/bizcaz1.jpg') fixed no-repeat","background-size":"cover", "height":"450px"});
     </script>   
 
 <!-- ######################## Section ######################## -->
 
 <section class="section_main">
 
-      <h1 style="text-align:center">Formal Scene</h1>
+      <h1 style="text-align:center">BizCaz Scene</h1>
 
       <h2 style="text-align:center; padding: 0 150px 50px"> I'm in the shizzle sheezy dolor crackalackin amizzle, yo bizzle elit. Nullizzle sapizzle velizzle, for sure volutpizzle, suscipit quizzle, own yo' vizzle, ma nizzle. Pellentesque eget tortor. Sizzle uhuh ... yih!. Fusce izzle shiznit check out this we gonna chung tempizzle break yo neck, yall. </h2>
 
