nav bar corrections

--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
             <ul id="menu-header" class="nav-bar horizontal">
                  <li class="active"><a href="index.html">Home</a></li>
                  <li class=""><a href="about.html">About</a></li>
-                 <li class=""><a href="portfolio.html">The Board</a></li>
+                 <li class=""><a href="board.html">The Board</a></li>
                  <li class=""><a href="pinterest-style.html">Events</a></li>
                  <li class=""><a href="fashion_show.html">Fashion Show</a></li>
                  <li class=""><a href="contact.html">Contact Us</a></li>
