--- a/contact.html
+++ b/contact.html
@@ -131,12 +131,10 @@
         </div>
 
         <div class="six columns">
-          <h3>Where to find us</h3><iframe src=
-          "http://maps.google.no/maps?f=q&amp;source=s_q&amp;hl=no&amp;geocode=&amp;q=Dieter+Schneider,+Hafstadvegen+34,+F%C3%B8rde&amp;aq=0&amp;oq=hafstadvegen+34+&amp;sll=61.450282,5.85535&amp;sspn=0.008368,0.027874&amp;g=hafstadvegen+34&amp;ie=UTF8&amp;hq=Dieter+Schneider,&amp;hnear=Hafstadvegen+34,+6800+F%C3%B8rde,+Sogn+og+Fjordane&amp;t=m&amp;ll=61.453106,5.857172&amp;spn=0.009536,0.019913&amp;z=15&amp;iwloc=A&amp;output=embed"
-          style="width:400px; height:375px; border:0"></iframe><br />
-          <small><a style="color: #0000ff; text-align: left;" href=
-          "http://maps.google.no/maps?f=q&amp;source=embed&amp;hl=no&amp;geocode=&amp;q=Dieter+Schneider,+Hafstadvegen+34,+F%C3%B8rde&amp;aq=0&amp;oq=hafstadvegen+34+&amp;sll=61.450282,5.85535&amp;sspn=0.008368,0.027874&amp;g=hafstadvegen+34&amp;ie=UTF8&amp;hq=Dieter+Schneider,&amp;hnear=Hafstadvegen+34,+6800+F%C3%B8rde,+Sogn+og+Fjordane&amp;t=m&amp;ll=61.453106,5.857172&amp;spn=0.009536,0.019913&amp;z=15&amp;iwloc=A">
-          Enlarge map</a></small>
+          <h3>Where to find us</h3>
+
+          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3051.458300136285!2d-88.227261!3d40.10978899999999!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880cd0eb0df454b5%3A0xe7ba4e7c081a6483!2sIllini+Union!5e0!3m2!1sen!2sus!4v1402008493056" width="450" height="450" frameborder="0" style="border:0"></iframe>
+
         </div>
       </div>
 
