--- a/fashion_show.html
+++ b/fashion_show.html
@@ -11,7 +11,7 @@
   <!-- Set the viewport width to device width for mobile -->
   <meta name="viewport" content="width=device-width" />
 
-  <title>AAA UIUC</title>
+  <title>AAA UIUC - Fashion Show</title>
   
   <!-- Included CSS Files (Compressed) -->
   <link rel="stylesheet" href="stylesheets/foundation.min.css">
@@ -436,9 +436,9 @@
     <div class="three column foo">
         <h3>Contact Us</h3>
             <ul class="footer_links">
-                <li><a href="#">Email: aaauiuc@gmail.com</a></li>
-                <li><a href="#">Illini Union 280<br>Office 256</a></li>
-                <li><a href="#">Find Us!</a></li>
+                <li><span style="color:#2ba6cb">Email: aaauiuc@gmail.com</span></li>
+                <li><span style="color:#2ba6cb">Illini Union 280<br>Office 256</span></li>
+                <li><a href="https://www.youtube.com/watch?v=Lf_eRgbhQ1M">Find Us!</a></li>
             </ul>
     </div>
     
@@ -476,13 +476,13 @@
     <div class="two column foo">
         <h3>Navigation</h3>
             <ul class="footer_links">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">The Board</a></li>
-                <li><a href="#">Events</a></li>
-                <li><a href="#">Fashion Show</a></li>
-                <li><a href="#">Contact Us</a></li>
-                <li><a href="#">Affiliates</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="board.html">The Board</a></li>
+                <li><a href="events.html">Events</a></li>
+                <li><a href="fashion_show.html">Fashion Show</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+                <li><a href="http://www.uiucapac.org/affiliates.html">Affiliates</a></li>
             </ul>   
     </div>
 
