Full Res Image Viewer
-used lightbox library
-tim chen maps on contact page have a full image viewer

--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,12 @@
   <link rel="stylesheet" href="stylesheets/main.css">
 
   <script src="javascripts/modernizr.foundation.js"></script>
-  
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+
+  <script src="lightbox/js/lightbox.min.js"></script>
+  <link href="lightbox/css/lightbox.css" rel="stylesheet" />
+
   <link rel="stylesheet" href="ligature.css">
   
   <!-- Google fonts -->
@@ -136,9 +141,9 @@
             <h3>From Our Very Own Cartographer Tim Chen</h3>
               <div>
                 <h5>First Floor</h5>
-                <img src="img/map1.jpg" width="450">
+                <a href="img/map1.jpg" data-lightbox="timchenmaps" data-title="First Floor"><img src="img/map1.jpg" width="450"></a>
                 <h5>Second Floor</h5>
-                <img src="img/map2.jpg" width="450">
+                <a href="img/map2.jpg" data-lightbox="timchenmaps" data-title="Second Floor"><img src="img/map2.jpg" width="450"></a>
               </div>    
           </div>
 
