--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 
   <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Playfair+Display:400italic' rel='stylesheet' type='text/css'/>
 
-  <link href="css/lightbox.css" rel="stylesheet" />
+  <link href="lightbox/css/lightbox.css" rel="stylesheet" />
 
   <script src="js/modernizr.foundation.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>  
@@ -199,8 +199,7 @@
     
   <script src="js/foundation.min.js" type="text/javascript"></script> 
   <script src="js/app.js" type="text/javascript"></script>
-  <script src="js/foundation/foundation.equalizer.js"></script>
-  <script src="js/lightbox.min.js"></script>
+  <script src="lightbox/js/lightbox.min.js"></script>
 
   <script type="javascript">
         $(document).foundation();
