updated megaswamperts email

--- a/board.html
+++ b/board.html
@@ -401,7 +401,7 @@
 		         <div class="four columns panel">
 		            <img src="img/board/wilson.jpg" width="350" height="350">
 		            <h3 align='center'>Wilson Guo</h3>
-		            <h4 align='center'>wguo20@illinois.edu</h4>
+		            <h4 align='center'>wilsonguo1238@gmail.com</h4>
 		            <h4 align='center'>#megaswampert</h4>
 		         </div>
 	        
