moar board page

--- a/fashion_show.html
+++ b/fashion_show.html
@@ -291,18 +291,18 @@
 <!-- ######################## Section ######################## -->
 
 <section>
-    <div id="broadwaypic"></div> 
+    <div id="bizcazpic"></div> 
 </section>     
 
     <script type="text/javascript">
-        $("#broadwaypic").css({"background":"url('img/fs/bizcaz1.jpg') fixed no-repeat","background-size":"cover", "height":"450px"});
+        $("#bizcazpic").css({"background":"url('img/fs/bizcaz1.jpg') fixed no-repeat","background-size":"cover", "height":"450px"});
     </script>   
 
 <!-- ######################## Section ######################## -->
 
 <section class="section_main fs">
 
-      <h1>Broadway Scene</h1>
+      <h1>BizCaz Scene</h1>
 
       <h2> I'm in the shizzle sheezy dolor crackalackin amizzle, yo bizzle elit. Nullizzle sapizzle velizzle, for sure volutpizzle, suscipit quizzle, own yo' vizzle, ma nizzle. Pellentesque eget tortor. Sizzle uhuh ... yih!. Fusce izzle shiznit check out this we gonna chung tempizzle break yo neck, yall. </h2>
 
@@ -312,7 +312,7 @@
         
          <div class="four columns panel">
             <h4>Dorothy Teng</h4>
-            <h5>hiepdu1992@gmail.com</h5>
+            <h5>dhteng2@illinois.edu</h5>
             <img src="img/fs_coords/cropped/dorothy.jpg">
          </div>
          
