Flag Opacity, Added Favicons, Reordered FS board

--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,9 @@
   <!-- Set the viewport width to device width for mobile -->
   <meta name="viewport" content="width=device-width">
 
-  <title>AAA UIUC - Contact Us</title>
+  <title>AAA UIUC | Contact Us</title>
+
+  <link rel="icon" type="image/x-icon" href="img/cash.ico"/>
   
   <link rel="stylesheet" href="css/foundation.min.css">
   <link rel="stylesheet" href="css/main.css">
@@ -38,7 +40,7 @@
                      <li><a href="contact.html">Contact Us</a></li>
                      <li><a href="http://www.uiucapac.org/affiliates.html">Affiliates</a></li>
 
-                     <span style="float:right">
+                     <span id="flagset">
                      <a href="https://www.facebook.com/groups/2200258601/" target="new"><img src="img/nav_bar_flags/fb.png"/></a>
                      <a href="https://twitter.com/AAA_UIUC" target="new"><img src="img/nav_bar_flags/tw.png"/></a>
                      <a href="http://aaa-uiuc.tumblr.com/" target="new"><img src="img/nav_bar_flags/tr.png"/></a>
