im falling down

--- a/fashion_show.html
+++ b/fashion_show.html
@@ -365,7 +365,8 @@
          <div class="four columns panel">
             <h4>Varun Munjeti</h4>
             <h5>munjeti2@illinois.edu</h5>
-            <img src="img/fs_coords/cropped/varun.jpg">
+            <img src="img/fs_coords/cropped/varun.jpg" onmouseover="this.src='img/fs_coords/cropped/varunf.jpg'" 
+            onmouseout="this.src='img/fs_coords/cropped/varun.jpg'">
          </div>
         
         </div>
