--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
       
 <!-- ######################## Section ######################## -->
       
-  <section class="section_light" style="padding-top:120px; padding-bottom:50px">
+  <section class="section_main" style="padding-top:120px; padding-bottom:50px">
 
   <style type="text/css">
     /*this line only works in this style tag, but not when written the same exact way in main.css. 
