--- a/board.html
+++ b/board.html
@@ -370,7 +370,7 @@
 		         
 		      
 		         <div class="four columns panel">
-		            <img src="img/board/alicey.jpg">
+		            <img src="img/board/alicey2.jpg">
 		            <h3 align='center'>Alice Yang</h3>
 		            <h4 align='center'>axyang2@illinois.edu</h4>
 		            <h4 align='center'>#yinyang</h4>
