--- a/ee.html
+++ b/ee.html
@@ -11,6 +11,7 @@
 
   <link rel="icon" type="image/x-icon" href="img/aaauiuc.ico"/>
   
+  <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/foundation.min.css">
   <link rel="stylesheet" href="css/main.css">
 
@@ -52,20 +53,40 @@
       
 </nav>
 
+<!-- ######################## Nav Bar Mobile ######################## -->
+
+<nav>
+
+      <ul class="navmobile">
+        <li>
+          Congrats!
+          <ul>
+              <a href="index.html"><li>Home</li></a>
+              <a href="about.html"><li>About</li></a>
+              <a href="board.html"><li>The Board</li></a>
+              <a href="events.html"><li>Events</li></a>
+              <a href="fashion_show.html"><li>Fashion Show</li></a>
+              <a href="contact.html"><li>Contact Us</li></a>
+              <a href="http://www.uiucapac.org/affiliates.html" target="_blank"><li>Affiliates</li></a>
+          </ul>
+        </li>
+      </ul>
+
+</nav>
+
 <!-- ######################## Section ######################## -->
 
-<section>
-  <div id="congrats" class="section_main">
-      <h1>Congratulations</h1>
-      <h2>You deserve a cookie.</h2>
-      <img src="img/cookie-monster.png">
+<section class="section_ee">
+  <div class="row">
+    <div class="column 12">
+        <div id="congrats">
+          <h1>Congratulations</h1>
+          <h2>You deserve a cookie.</h2>
+          <img src="img/cookie-monster.png">
+        </div>
+    </div>
   </div>
-  <style type="text/css">
-      #congrats{text-align: center; padding-top: 100px;}
-  </style> 
-  <script type="text/javascript">
 
-  </script> 
 </section>
 
 <!-- ######################## Footer ######################## -->  
@@ -78,7 +99,7 @@
 
     <div class="three column">
         <h3>Contact Us</h3>
-            <ul class="footer_links">
+            <ul>
                 <li><span style="color:#2ba6cb">Email: aaauiuc@gmail.com</span></li>
                 <li><span style="color:#2ba6cb">Illini Union 280<br>Office 256</span></li>
                 <li><a href="https://www.youtube.com/watch?v=Lf_eRgbhQ1M">Find Us!</a></li>
@@ -97,7 +118,7 @@
                 <input type="text" placeholder="Enter Email Here"/>
               </label>
             </div>
-            <a href="#" class="button" id="submit-button">Submit</a>
+            <a href="#" class="button expand" id="submit-button">Submit</a>
           </div>
         </form>
 
@@ -118,7 +139,7 @@
     
     <div class="two column">
         <h3>Navigation</h3>
-            <ul class="footer_links">
+            <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="board.html">The Board</a></li>
