--- a/gcal.html
+++ b/gcal.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset='utf-8' />
+<link rel="stylesheet" href="css/normalize.css">
 <link href='fullcalendar/fullcalendar.css' rel='stylesheet' />
 <link href='fullcalendar/fullcalendar.print.css' rel='stylesheet' media='print'/>
 <script src='fullcalendar/lib/moment.min.js'></script>
