--- a/events.html
+++ b/events.html
@@ -84,15 +84,15 @@
       
           <article class="six columns" id="e1">
                 <div class="panel shadow">
-                    <h3>T Shirt Design Contest</h3>
-                    <div class="shadow2"><a href="https://www.facebook.com/events/762057360501546/" target="new"><img src="img/events/event01.jpg"/></a></div>
+                    <h3>Coming Soon!</h3>
+                    <div class="shadow2"><img src="img/fillerw.png"/></div>
                 </div>
           </article>
           
           <article class="six columns">
                 <div class="panel shadow" id="e2">
-                    <h3>Fashion Show</h3>
-                    <div class="shadow2"><a href="https://www.facebook.com/events/623943981006497/" target="new"><img src="img/events/fashion_show.jpg"/></a></div>
+                    <h3>Coming Soon!</h3>
+                    <div class="shadow2"><img src="img/fillerw.png"/></div>
                 </div>
           </article>
   
