--- a/index.html
+++ b/index.html
@@ -146,15 +146,15 @@
       
           <div class="six columns">
                 <div class="panel">
-                    <h3>T Shirt Design Contest</h3>
-                    <a href="https://www.facebook.com/events/762057360501546/" target="new"><img src="img/events/event01.jpg"/></a>
+                    <h3>Coming Soon!</h3>
+                    <img src="img/filler.png"/>
                 </div>
           </div>
           
           <div class="six columns">
                 <div class="panel">
-                    <h3>Fashion Show</h3>
-                    <a href="https://www.facebook.com/events/623943981006497/" target="new"><img src="img/events/fashion_show.jpg"/></a>
+                    <h3>Coming Soon!</h3>
+                    <img src="img/filler.png"/>
                 </div>
           </div>
   
