--- a/board.html
+++ b/board.html
@@ -351,7 +351,7 @@
 		         <div class="four columns panel">
 		            <img src="img/board/bianca.jpg">
 		            <h3 align='center'>Bianca Carbajal</h3>
-		            <h4 align='center'>bcarba3@illinois.edu</h4>
+		            <h4 id="varun" align='center'>bcarba3@illinois.edu</h4>
 		            <h4 align='center'>#binca</h4>
 		         </div>
 		          
@@ -376,7 +376,7 @@
 		         <div class="four columns panel">
 		            <img src="img/board/varun.jpg">
 		            <h3 align='center'>Varun Munjeti</h3>
-		            <h4 align='center'>vrunjeti@gmail.com</h4>
+		            <h4 align='center'>munjeti2@illinois.edu</h4>
 		            <h4 align='center'>#indianjesus</h4>
 		         </div>
 		          
