--- a/contact.html
+++ b/contact.html
@@ -161,13 +161,9 @@
 
           <div class="six columns">
             <h3>Where is the AAA office you ask?</h3>
-<<<<<<< HEAD
               <!-- <iframe id="contactyt" src="https://www.youtube.com/embed/Lf_eRgbhQ1M" frameborder="0" allowfullscreen></iframe> -->
               <!-- <iframe src="http://www.staggeringbeauty.com/" style="border: 1px inset #ddd" width="498" height="498"></iframe> -->
               <img src="img/filler.png">
-=======
-              <iframe id="contactyt" src="https://www.youtube.com/embed/Lf_eRgbhQ1M" frameborder="0" allowfullscreen></iframe>
->>>>>>> parent of 2a9bf0a... Stufffff
           </div>
 
       </div>
@@ -181,6 +177,7 @@
                 <a href="img/contact/map1.jpg" data-lightbox="timchenmaps" data-title="First Floor"><img src="img/contact/map1.jpg" width="450"></a>
                 <h5>Second Floor</h5>
                 <a href="img/contact/map2.jpg" data-lightbox="timchenmaps" data-title="Second Floor"><img src="img/contact/map2.jpg" width="450"></a>
+                <a href="img/contact/hinthint.png" data-lightbox="timchenmaps" data-title="Hey look! It's a hint!"></a>
               </div>    
           </div>
 
