--- a/fashion_show.html
+++ b/fashion_show.html
@@ -265,7 +265,7 @@
 
       <div class="row">
         <div class="column twelve">
-          <h2> I'm in the shizzle sheezy dolor crackalackin amizzle, yo bizzle elit. Nullizzle sapizzle velizzle, for sure volutpizzle, suscipit quizzle, own yo' vizzle, ma nizzle. Pellentesque eget tortor. Sizzle uhuh ... yih!. Fusce izzle shiznit check out this we gonna chung tempizzle break yo neck, yall. </h2>
+          <h2>Get in touch with your cultural side in this diverse scene. Interested in learning dances from all over Asia, then look no further! Here you will immerse yourself in something different and, in the process, appreciate the different methods of expression these cultures have. Make new friends and learn something new together!</h2>
         </div>
       </div>
 
@@ -280,7 +280,7 @@
        <div class="three columns panel">
           <h4>Helen Fan</h4>
           <h5>hafan2@illinois.edu</h5>
-          <img src="img/fs_coords/cropped/melissa.jpg">
+          <img src="img/fs_coords/cropped/helen.jpg">
        </div> 
 
        <div class="three columns panel">
@@ -332,7 +332,7 @@
 
       <div class="row">
         <div class="column twelve">
-          <h2> I'm in the shizzle sheezy dolor crackalackin amizzle, yo bizzle elit. Nullizzle sapizzle velizzle, for sure volutpizzle, suscipit quizzle, own yo' vizzle, ma nizzle. Pellentesque eget tortor. Sizzle uhuh ... yih!. Fusce izzle shiznit check out this we gonna chung tempizzle break yo neck, yall. </h2>
+          <h2>Tap in to the world of hip-hop through a unique and engaging way! Here you will get a taste of the various styles of street dancing applied to your favorite songs. Throw yourself out there and learn to move your body to the hard-hitting, but sometimes smooth, choreography we have planned for you this year.</h2>
         </div>
       </div>
 
@@ -393,7 +393,7 @@
 
       <div class="row">
         <div class="column twelve">
-          <h2> I'm in the shizzle sheezy dolor crackalackin amizzle, yo bizzle elit. Nullizzle sapizzle velizzle, for sure volutpizzle, suscipit quizzle, own yo' vizzle, ma nizzle. Pellentesque eget tortor. Sizzle uhuh ... yih!. Fusce izzle shiznit check out this we gonna chung tempizzle break yo neck, yall. </h2>
+          <h2>Step out of your comfort zone! Formal scene's partner dances will encourage you to get comfortable with moving your body in sync with your partner. Put your best smile on as you work together to learn to the sexy tango, energetic swing, and much more!</h2>
         </div>
       </div>
 
@@ -448,13 +448,13 @@
 
       <div class="row">
         <div class="column twelve">
-          <h1>BizCaz Scene</h1>
+          <h1>Broadway Scene</h1>
         </div>
       </div>
 
       <div class="row">
         <div class="column twelve">
-          <h2> I'm in the shizzle sheezy dolor crackalackin amizzle, yo bizzle elit. Nullizzle sapizzle velizzle, for sure volutpizzle, suscipit quizzle, own yo' vizzle, ma nizzle. Pellentesque eget tortor. Sizzle uhuh ... yih!. Fusce izzle shiznit check out this we gonna chung tempizzle break yo neck, yall. </h2>
+          <h2>Let's make it big!!! It's Broadway scene, we everything must be bigger. Bigger atmosphere, bigger emotions, bigger movement! Expose your classy side with smooth jazz choreography. Don't be afraid to break a leg, that's showbiz!</h2>
         </div>
       </div>
 
@@ -515,7 +515,7 @@
 
       <div class="row">
         <div class="column twelve">
-          <h2> I'm in the shizzle sheezy dolor crackalackin amizzle, yo bizzle elit. Nullizzle sapizzle velizzle, for sure volutpizzle, suscipit quizzle, own yo' vizzle, ma nizzle. Pellentesque eget tortor. Sizzle uhuh ... yih!. Fusce izzle shiznit check out this we gonna chung tempizzle break yo neck, yall. </h2>
+          <h2>Feeling expressive? Modern scene is designed to get you in touch with your emotions and the dancer we all have hidden inside! Get ready to touch the audience with a dramatic mix of lyrical hiphop and contemporary choreography!</h2>
         </div>
       </div>
 
