--- a/index.html
+++ b/index.html
@@ -21,10 +21,8 @@
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="js/fastclick.js"></script>
 
-  <script type="text/javascript" src="js/konami.js"></script> 
-  <script type="text/javascript">
-      var easter_egg = new Konami('ee.html');   
-  </script>
+  <script type="text/javascript" src="js/swaggr.js"></script> 
+  <script type="text/javascript" src="js/combinatr.js"></script>
 
 </head>
 
