changed to fs from fashion_show

--- a/board.html
+++ b/board.html
@@ -35,7 +35,7 @@
                      <li><a href="about.html">About</a></li>
                      <li><a href="board.html">The Board</a></li>
                      <li><a href="events.html">Events</a></li>
-                     <li><a href="fashion_show.html">Fashion Show</a></li>
+                     <li><a href="fs.html">Fashion Show</a></li>
                      <li><a href="contact.html">Contact Us</a></li>
                      <li><a href="http://www.uiucapac.org/affiliates.html" target="_blank">Affiliates</a></li>
 
@@ -65,7 +65,7 @@
               <a href="about.html"><li>About</li></a>
               <a href="board.html"><li>The Board</li></a>
               <a href="events.html"><li>Events</li></a>
-              <a href="fashion_show.html"><li>Fashion Show</li></a>
+              <a href="fs.html"><li>Fashion Show</li></a>
               <a href="contact.html"><li>Contact Us</li></a>
               <a href="http://www.uiucapac.org/affiliates.html" target="_blank"><li>Affiliates</li></a>
           </ul>
@@ -500,7 +500,7 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="board.html">The Board</a></li>
                 <li><a href="events.html">Events</a></li>
-                <li><a href="fashion_show.html">Fashion Show</a></li>
+                <li><a href="fs.html">Fashion Show</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
                 <li><a href="http://www.uiucapac.org/affiliates.html">Affiliates</a></li>
             </ul>   
