--- a/fashion_show.html
+++ b/fashion_show.html
@@ -18,7 +18,7 @@
   <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Playfair+Display:400italic' rel='stylesheet' type='text/css'/>
 
   <script src="js/modernizr.foundation.js"></script>
-  <script src="js/jquery.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>  
 
 </head>
 
@@ -99,8 +99,7 @@
               vph = $(window).height();
               vpw = $(window).width();
               $('header').css({'height': vph + 'px'});
-              //alert("height:" + vph +" width:" + vpw + " nav bar height:" + $('.nav-bar').height() + " logo height:" + $('#header-logo img').height() + "logo width:" + $('#header-logo img').width());
-              $('#header-logo').css({'top': vph/2 - 92 + $('.nav-bar').height()/2 + 'px'});
+              $('#header-logo').css({'top': vph/2 - $('#header-logo img').height()/2 + $('.nav-bar').height()/2 + 'px'});
               $('#header-logo').css({'left': vpw/2 - $('#header-logo img').width()/2 + 'px'});
           }
 
@@ -573,17 +572,14 @@
     <div class="three column">
         <h3>Join Our Email List!</h3>
 
-        <form action="//aaauiuc.us6.list-manage.com/subscribe/post?u=d867fc5c62ce793a3af012a4a&amp;id=e32367e809" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+        <form>
           <div class="row">
             <div class="large-12 columns">
               <label>
-                <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" required placeholder="Enter Email Here"/>
-                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                <div style="position: absolute; left: -5000px;"><input type="text" name="b_d867fc5c62ce793a3af012a4a_e32367e809" tabindex="-1" value=""></div>
+                <input type="text" placeholder="Enter Email Here"/>
               </label>
             </div>
-            <input type="submit" value="Subscribe" name="subscribe" id="submit-button" class="button">
-            <!-- <a class="button expand" id="submit-button">Submit</a> -->
+            <a href="#" class="button expand" id="submit-button">Submit</a>
           </div>
         </form>
 
