fixed typos and made nav bar highlight current page

--- a/fs.html
+++ b/fs.html
@@ -31,11 +31,11 @@
      <div style="position:fixed" class="twelve columns header_nav">
          <div class="row">
                <ul id="menu-header" class="nav-bar horizontal">
-                     <li class="active"><a href="index.html">Home</a></li>
+                     <li><a href="index.html">Home</a></li>
                      <li><a href="about.html">About</a></li>
                      <li><a href="board.html">The Board</a></li>
                      <li><a href="events.html">Events</a></li>
-                     <li><a href="fs.html">Fashion Show</a></li>
+                     <li class="active"><a href="fs.html">Fashion Show</a></li>
                      <li><a href="contact.html">Contact Us</a></li>
                      <li><a href="http://www.uiucapac.org/affiliates.html" target="_blank">Affiliates</a></li>
 
@@ -455,7 +455,7 @@
 
       <div class="row">
         <div class="column twelve">
-          <h2>Let's make it big!!! It's Broadway scene, we everything must be bigger. Bigger atmosphere, bigger emotions, bigger movement! Expose your classy side with smooth jazz choreography. Don't be afraid to break a leg, that's showbiz!</h2>
+          <h2>Let's make it big!!! It's Broadway scene, everything must be bigger. Bigger atmosphere, bigger emotions, bigger movement! Expose your classy side with smooth jazz choreography. Don't be afraid to break a leg, that's showbiz!</h2>
         </div>
       </div>
 
