--- a/about.html
+++ b/about.html
@@ -31,8 +31,8 @@
      <div style="position:fixed" class="twelve columns header_nav">
          <div class="row">
                <ul id="menu-header" class="nav-bar horizontal">
-                     <li class="active"><a href="index.html">Home</a></li>
-                     <li><a href="about.html">About</a></li>
+                     <li><a href="index.html">Home</a></li>
+                     <li class="active"><a href="about.html">About</a></li>
                      <li><a href="board.html">The Board</a></li>
                      <li><a href="events.html">Events</a></li>
                      <li><a href="fs.html">Fashion Show</a></li>
@@ -121,7 +121,7 @@
 
       <div class="row">
         <div class="column twelve">
-          <h2> The goal of Asian American Association for 2013-2014 is to establish a strong Pan Asian identity and promote active engagement with communities outside of AAA while maintaining a positive internal dynamic. </h2>
+          <h2> The goal of Asian American Association for 2014-2015 is to establish a strong Pan Asian identity and promote active engagement with communities outside of AAA while maintaining a positive internal dynamic. </h2>
         </div>
       </div>
 
