--- a/contact.html
+++ b/contact.html
@@ -33,12 +33,12 @@
      <div style="position:fixed" class="twelve columns header_nav">
          <div class="row">
                <ul id="menu-header" class="nav-bar horizontal">
-                     <li class="active"><a href="index.html">Home</a></li>
+                     <li><a href="index.html">Home</a></li>
                      <li><a href="about.html">About</a></li>
                      <li><a href="board.html">The Board</a></li>
                      <li><a href="events.html">Events</a></li>
                      <li><a href="fs.html">Fashion Show</a></li>
-                     <li><a href="contact.html">Contact Us</a></li>
+                     <li class="active"><a href="contact.html">Contact Us</a></li>
                      <li><a href="http://www.uiucapac.org/affiliates.html" target="_blank">Affiliates</a></li>
 
                      <span id="flagset">
