updated about page goal

--- a/about.html
+++ b/about.html
@@ -121,7 +121,7 @@
 
       <div class="row">
         <div class="column twelve">
-          <h2> The goal of Asian American Association for 2014-2015 is to establish a strong Pan Asian identity and promote active engagement with communities outside of AAA while maintaining a positive internal dynamic. </h2>
+          <h2> Our goal for the 2014-2015 year is to create a more member-focused environment that encourages higher retention and establish lasting relationships with APAC and non-APAC organizations while exploring APA issues. </h2>
         </div>
       </div>
 
