--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
 <!-- ######################## Nav Bar Mobile ######################## -->
 
 <nav>
-
+      <h3 id="title">Contact Us</h3>
       <ul id="menu">
          <li><a href="index.html">Home</a></li>
          <li><a href="about.html">About</a></li>
