--- a/events.html
+++ b/events.html
@@ -70,7 +70,7 @@
 <!-- ######################## Nav Bar Mobile ######################## -->
 
 <nav>
-
+      <h3 id="title">Events</h3>
       <ul id="menu">
          <li><a href="index.html">Home</a></li>
          <li><a href="about.html">About</a></li>
