--- a/fs.html
+++ b/fs.html
@@ -60,7 +60,7 @@
 <!-- ######################## Nav Bar Mobile ######################## -->
 
 <nav>
-
+      <h3 id="title">Fashion Show</h3>
       <ul id="menu">
          <li><a href="index.html">Home</a></li>
          <li><a href="about.html">About</a></li>
