--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 <!-- ######################## Nav Bar Mobile ######################## -->
 
 <nav>
-
+      <h3 id="title">AAA UIUC</h3>
       <ul id="menu">
          <li><a href="index.html">Home</a></li>
          <li><a href="about.html">About</a></li>
