--- a/01100011011000010111001101101000001000000110110101101111011011100110010101111001.html
+++ b/01100011011000010111001101101000001000000110110101101111011011100110010101111001.html
@@ -49,7 +49,7 @@
                      <li><a href="about.html">About</a></li>
                      <li><a href="board.html">The Board</a></li>
                      <li><a href="events.html">Events</a></li>
-                     <li><a href="fashion_show.html">Fashion Show</a></li>
+                     <li><a href="fs.html">Fashion Show</a></li>
                      <li><a href="contact.html">Contact Us</a></li>
                      <li><a href="http://www.uiucapac.org/affiliates.html" target="_blank">Affiliates</a></li>
 
@@ -178,7 +178,7 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="board.html">The Board</a></li>
                 <li><a href="events.html">Events</a></li>
-                <li><a href="fashion_show.html">Fashion Show</a></li>
+                <li><a href="fs.html">Fashion Show</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
                 <li><a href="http://www.uiucapac.org/affiliates.html">Affiliates</a></li>
             </ul>   
