--- a/events.html
+++ b/events.html
@@ -105,14 +105,14 @@
           <article class="six columns" id="e1">
                 <div class="panel shadow">
                     <h3>1st General Meeting</h3>
-                    <div class="shadow2"><a href="facebook.com/events/774348085940223"><img src="img/events/gen_meeting_1.png"/></a></div>
+                    <div class="shadow2"><a href="http://facebook.com/events/774348085940223"><img src="img/events/gen_meeting_1.png"/></a></div>
                 </div>
           </article>
           
           <article class="six columns">
                 <div class="panel shadow" id="e2">
                     <h3>Asiantation</h3>
-                    <div class="shadow2"><a href="facebook.com/events/334865963337948/"><img src="img/events/asiantation.jpg"/></a></div>
+                    <div class="shadow2"><a href="http://facebook.com/events/334865963337948/"><img src="img/events/asiantation.jpg"/></a></div>
                 </div>
           </article>
   
