--- a/index.html
+++ b/index.html
@@ -161,14 +161,14 @@
           <div class="six columns">
                 <div class="panel">
                     <h3>1st General Meeting</h3>
-                    <div class="shadow2"><a href="facebook.com/events/774348085940223"><img src="img/events/gen_meeting_1.png"/></a></div>
+                    <div class="shadow2"><a href="http://facebook.com/events/774348085940223"><img src="img/events/gen_meeting_1.png"/></a></div>
                 </div>
           </div>
           
           <div class="six columns">
                 <div class="panel">
                     <h3>Asiantation</h3>
-                    <div class="shadow2"><a href="facebook.com/events/334865963337948/"><img src="img/events/asiantation.jpg"/></a></div>
+                    <div class="shadow2"><a href="http://facebook.com/events/334865963337948/"><img src="img/events/asiantation.jpg"/></a></div>
                 </div>
           </div>
   
