updated affiliates link

--- a/01100011011000010111001101101000001000000110110101101111011011100110010101111001.html
+++ b/01100011011000010111001101101000001000000110110101101111011011100110010101111001.html
@@ -62,7 +62,7 @@
                      <li><a href="events.html">Events</a></li>
                      <li><a href="fs.html">Fashion Show</a></li>
                      <li><a href="contact.html">Contact Us</a></li>
-                     <li><a href="http://www.uiucapac.org/affiliates.html" target="_blank">Affiliates</a></li>
+                     <li><a href="http://www.uiucapac.com/affiliates.html" target="_blank">Affiliates</a></li>
 
                      <span id="flagset">
                      <a href="https://www.facebook.com/groups/2200258601/" target="new"><img src="img/nav_bar_flags/fb.png"/></a>
@@ -89,7 +89,7 @@
          <li><a href="events.html">Events</a></li>
          <li><a href="fs.html">Fashion Show</a></li>
          <li><a href="contact.html">Contact Us</a></li>
-         <li><a href="http://www.uiucapac.org/affiliates.html" target="_blank">Affiliates</a></li>
+         <li><a href="http://www.uiucapac.com/affiliates.html" target="_blank">Affiliates</a></li>
       </ul>
 
 </nav>
@@ -191,7 +191,7 @@
                 <li><a href="events.html">Events</a></li>
                 <li><a href="fs.html">Fashion Show</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
-                <li><a href="http://www.uiucapac.org/affiliates.html">Affiliates</a></li>
+                <li><a href="http://www.uiucapac.com/affiliates.html">Affiliates</a></li>
             </ul>   
     </div>
 
