--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
                      <li><a href="events.html">Events</a></li>
                      <li><a href="fs.html">Fashion Show</a></li>
                      <li><a href="contact.html">Contact Us</a></li>
-                     <li><a href="http://www.uiucapac.org/affiliates.html" target="_blank">Affiliates</a></li>
+                     <li><a href="http://www.uiucapac.com/affiliates.html" target="_blank">Affiliates</a></li>
 
                      <span id="flagset">
                      <a href="https://www.facebook.com/groups/2200258601/" target="new"><img src="img/nav_bar_flags/fb.png"/></a>
@@ -79,7 +79,7 @@
          <li><a href="events.html">Events</a></li>
          <li><a href="fs.html">Fashion Show</a></li>
          <li><a href="contact.html">Contact Us</a></li>
-         <li><a href="http://www.uiucapac.org/affiliates.html" target="_blank">Affiliates</a></li>
+         <li><a href="http://www.uiucapac.com/affiliates.html" target="_blank">Affiliates</a></li>
       </ul>
 
 </nav>
@@ -330,7 +330,7 @@
                 <li><a href="events.html">Events</a></li>
                 <li><a href="fs.html">Fashion Show</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
-                <li><a href="http://www.uiucapac.org/affiliates.html">Affiliates</a></li>
+                <li><a href="http://www.uiucapac.com/affiliates.html">Affiliates</a></li>
             </ul>   
     </div>
 
