updated affiliates link again

--- a/board.html
+++ b/board.html
@@ -517,7 +517,7 @@
                 <li><a href="events.html">Events</a></li>
                 <li><a href="fs.html">Fashion Show</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
-                <li><a href="http://www.uiucapac.com/affiliates.html">Affiliates</a></li>
+                <li><a href="http://www.uiucapac.com/affiliates.html" target="_blank">Affiliates</a></li>
             </ul>   
     </div>
 
