added link to bbq

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
           <div class="six columns">
                 <div class="panel">
                     <h3>9/13 - BBQ</h3>
-                    <div class="shadow2"><img src="img/events/bbq.png"/></div>
+                    <div class="shadow2"><a href="http://facebook.com/events/549422955185194/" target="_blank"><img src="img/events/bbq.png"/></div>
                 </div>
           </div>
   
