--- a/events.html
+++ b/events.html
@@ -130,7 +130,7 @@
           <article class="six columns">
                 <div class="panel shadow" id="e2">
                     <h3>9/13 - BBQ</h3>
-                    <div class="shadow2"><img src="img/events/bbq.png"/></div>
+                    <div class="shadow2"><a href="http://facebook.com/events/549422955185194/" target="_blank"><img src="img/events/bbq.png"/></div>
                 </div>
           </article>
           
